<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.ansoft.bfit.Fragments.Home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_disover"
        android:name="com.ansoft.bfit.Fragments.Home.DiscoverFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_discover" />

    <fragment
        android:id="@+id/nav_whatsnew"
        android:name="com.ansoft.bfit.Fragments.Home.WhatsNewFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_whats_new" />

    <fragment
        android:id="@+id/nav_report"
        android:name="com.ansoft.bfit.Fragments.Home.ReportFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_report" />


    <fragment
        android:id="@+id/nav_fitness_expert"
        android:name="com.ansoft.bfit.Fragments.Home.ExpertFragment"
        android:label="@string/meet_experts"
        tools:layout="@layout/fragment_report" />


    <fragment
        android:id="@+id/nav_settings"
        android:name="com.ansoft.bfit.Fragments.Home.SettingsFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_setting" />

</navigation>